[TASK] Added more variants and made background images changeable via constant editor

--- a/Resources/Private/Dyncss/import.less
+++ b/Resources/Private/Dyncss/import.less
@@ -7,11 +7,11 @@
 @brand-primary: #00a8d6;
 @brand-secondary: #ffffff;
 
-@lightblue1: desaturate(spin(@brand-primary, -2), 7%, relative);
-@lightblue2: lighten(desaturate(spin(@brand-primary, -2), 7%, relative), 5%, relative);
-@mediumblue: darken(@brand-primary, 26%, relative);
-@darkblue: darken(desaturate(@brand-primary, 8%, relative), 50%, relative);
-@lightblue2_trans_10: fade(@brand-primary, 90%, relative);
+@lightcolour1: desaturate(spin(@brand-primary, -2), 7%, relative);
+@lightcolour2: lighten(desaturate(spin(@brand-primary, -2), 7%, relative), 5%, relative);
+@mediumcolour: darken(@brand-primary, 26%, relative);
+@darkcolour: darken(desaturate(@brand-primary, 8%, relative), 50%, relative);
+@lightcolour2_trans_10: fade(@brand-primary, 90%, relative);
 
 @white: @brand-secondary;
 @black: #000000;
@@ -43,9 +43,9 @@
 @font-family_1: "Open Sans", "Raleway", Lucida Sans Unicode, Verdana, Helvetica, sans-serif;
 @font-family_2: "Raleway", Lucida Sans Unicode, "Helvetica Neue", Helvetica, Arial, sans-serif;
 @font-family_3: FontAwesome;
+@banner-background: '../../../Public/Images/blur.png';
 @pattern-background: '../../../Public/Images/blue-square.png';
 @testimonial-background: '../../../Public/Images/headshot-bg.jpg';
-@banner-background: '../../../Public/Images/blur.png';
 
 @navbar-default-bg: @gray-dark;
 @navbar-default-link-color: @gray-lighter;
