[TASK] Added more configurable less variables and enabled html5videoplayer

--- a/Resources/Private/Dyncss/import.less
+++ b/Resources/Private/Dyncss/import.less
@@ -32,6 +32,7 @@
 @black_trans_60: fade(@black, 40%);
 @black_trans_50: fade(@black, 50%);
 @black_trans_40: fade(@black, 60%);
+@black_trans_0: fade(@black, 0%);
 @success: #72b569;
 @alert: #ff3d7f;
 @color_facebook: #204385;
@@ -57,7 +58,7 @@
 @baseurlImage: '/typo3conf/ext/theme_bootstrap_cleany/Resources/Public/Images/';
 
 // Base font size for body tag
-@baseFontSize: 14;
+@baseFontSize: 14px;
 
 // Styles for this theme
 @import "Library/animate.less";
