[TASK] Adjusted videoplayer default styling to match theme style

--- a/Resources/Private/Dyncss/import.less
+++ b/Resources/Private/Dyncss/import.less
@@ -48,10 +48,13 @@
 @pattern-background: '../../../Public/Images/blue-square.png';
 @testimonial-background: '../../../Public/Images/headshot-bg.jpg';
 
+@link-color: @gray-lighter;
+@link-hover-color: @brand-primary;
+
 @navbar-default-bg: @gray-dark;
-@navbar-default-link-color: @gray-lighter;
-@navbar-default-link-hover-color: @brand-primary;
-@navbar-default-link-active-color: @brand-primary;
+@navbar-default-link-color: @link-color;
+@navbar-default-link-hover-color: @link-hover-color;
+@navbar-default-link-active-color: @link-hover-color;
 @border-radius-base: 0;
 
 // Base URL for images
